--- a/engines/common/nucleus/scss/nucleus/_nav.scss
+++ b/engines/common/nucleus/scss/nucleus/_nav.scss
@@ -18,13 +18,13 @@
 		> li {
 			display: inline-block;
 			cursor: pointer;
-			@include transition(all .2s ease-out);
+			@include transition(background .2s ease-out);
 
 			.g-menu-item-content {
 				display: inline-block;
 				vertical-align: middle;
 				cursor: pointer;
-				@include transition(all .2s ease-out);
+				//@include transition(all .2s ease-out); // is this needed?
 			}
 	    	// Menu Parent Indicator on Main TopLevel
 	    	&.g-parent {
@@ -67,13 +67,13 @@
 	// First Level Dropdown
 	.g-dropdown {
 		@extend %inactive-dropdown;
-	    @include transition(all .2s ease-out);
+	    @include transition(opacity .2s ease-out);
     }
 
 	// Sublevel Items
 	.g-sublevel {
     	> li {
-    		@include transition(all .2s ease-out);
+    		@include transition(background .2s ease-out);
 
     		.g-menu-item-content {
 				display: block;
